2008-09-18  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #414758
	* expression.cs, ecore.cs: Fixed crash when accessing non-static
	property.

2008-09-18  Marek Safar  <marek.safar@gmail.com>

	* driver.cs, namespace.cs: Read types and namespaces after all
	requested assemblies are loaded, fixes issues with System.Core
	auto-reference, and #419888.

2008-09-18  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #417705
	* cs-parser.jay: Fixed as/is operator expression split.

2008-09-18  Marek Safar  <marek.safar@gmail.com>

	* const.cs, expression.cs, statement.cs, ecore.cs, cs-parser.jay:
	Fixed expression tree representation of empty new expression and
	new initializer expression.

2008-09-18  Miguel de Icaza  <miguel@novell.com>

	* eval.cs: Remove warning, keep reference to driver around.

	* Hide fields that do not need to be public.

2008-09-17  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #426385
	* expression.cs (ImplicitlyTypedArrayCreation): Use full implicit
	conversion for array elements.

2008-09-17  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, statement.cs, class.cs, cs-parser.jay: Fixed
	void parsing conflicts.

2008-09-15  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #425601
	* driver.cs, typemanager.cs, namespace.cs: Automatically reference
	System.Core only when there is no custom ExtensionAttribute
	implementation.

2008-09-15  Miguel de Icaza  <miguel@novell.com>

	* namespace.cs: Do not report CS0246 (name

2008-09-12  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #425669
	* generic.cs: Don't cache generic static anonymous method 
	containers.

2008-09-12  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, class.cs, delegate.cs: Check recursive inherited
	conflicting constraints.

2008-09-12  Raja R Harinath  <harinath@hurrynot.org>

	* cs-tokenizer.cs (consume_identifier): Allow partial methods in
	mcs too.

2008-09-12  Marek Safar  <marek.safar@gmail.com>
