@@ -1,3 +1,8 @@
+2008-09-19  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #427592
+	* generic.cs: Use common parameter resolve method.
+
 2008-09-18  Marek Safar  <marek.safar@gmail.com>
 
 	A fix for bug #414758
